try to fix dropdown headers not in container on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,6 @@ main {
     width: inherit;
     left: 0;
     top: 100%;
-    /* grid-gap: 10px; */
     row-gap: 10px;
     flex-direction: column;
     padding: 10px;
@@ -273,6 +272,7 @@ main {
 }
 
 #dropdown h2 {
+    vertical-align: middle;
     /* border: 2px red solid; */
     font-weight: bold;
     font-size: 24px;
@@ -286,7 +286,7 @@ main {
 }
 
 #add-to-map a {
-    line-height: 100%;
+    vertical-align: middle;
     display: inline-block;
     /* padding-top: 50px; */
     /* padding-left: 10px; */
